confs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-ef
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-ef
  template:
    metadata:
      labels:
        app: app-ef
    spec:
      containers:
        - name: app-ef
          image: wil42/playground:v2
          ports:
            - containerPort: 8888
