confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-ef
  namespace: dev
spec:
  selector:
    app: app-ef
  ports:
    - port: 80
      targetPort: 8888
