confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: iot-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-ef
            port:
              number: 80
